Changes between nazghul-0.1.2 and nazghul-0.1.3

gmcnutt:

o The blit_map api call now works on places besides the one the mech is located
  in. Previously it took a place parm but ignored it, defaulting to the current
  place. Now it works as originally intended.

o The CONNECT construct can now be used outside of the object {} block of a
  PLACE definition, allowing mechs in different places to be more easily wired
  together.

o Mostly for demonstration purposes I added two levers in the middle of Green
  Tower. One lever activates a portcullis in Green Tower Lower (the
  underground, a different place) by means of the new global CONNECT
  construct. The other lever activates a drawbridge in Green Tower Lower by
  means of the newly corrected 'place' parm of blit map.

o Added a mandrake patch to the wilderness. This required a fair amount of new,
  special-case engine support, which annoys me: a MECH_FULL_MOON signal is
  supported by the engine and delivered to every mech in the game whenever
  either moon hits phase 0 (which the engine assumes to be full... see what I
  mean? warty).

o Added the create_object api call for mech and conversations scriptlets. This
  creates a simple object like an armament or item.

o Added the create_npc_party api call for same. This creates npc parties and
  adds them to the specified place (haven't tested created them in other
  places, but the support is all there). Works in combat (dungeon rooms), too.

o Added a new engine-supported mech signal: MECH_TURN, which is delivered every
  turn to every mechanism within the player's current place.

o Added some new mechanism macros in the examples to test the new
  constructs. See the wilderness, the slime cave and Green Tower for example
  usage.

o Added a ^z for map editing. This toggles map zooming.

o Created a simple inn where the player can check out a room to sleep
  in. Haven't perfected the logic behind locking the player back out when he's