@@ -2,6 +2,9 @@ Changes between nazghul-0.1.2 and nazghul-0.1.3
 
 gmcnutt:
 
+o Added a quantity field for placed items. The arrows, bolts and rocks in the
+  terrain test map provide a sample usage.
+
 o The blit_map api call now works on places besides the one the mech is located
   in. Previously it took a place parm but ignored it, defaulting to the current
   place. Now it works as originally intended.
